# MyQuake

./: .gitignore  CMakeLists.txt  README.md
id1/: s0.sav
id1/shaders/: ps.glsl  ps_particle.glsl  ps_picture.glsl  ps_sky.glsl  vs.glsl  vs_particle.glsl  vs_picture.glsl  vs_sky.glsl
src/: CMakeLists.txt  cd_sdl.c  chase.c  cl_main.c  cl_parse.c  client.h  common.c  common.h  console.c  draw.h  draw_support.c  host.c  host_cmd.c  in_sdl.c  mathlib.c  menu.c  model.c  model.h  net_main.c  pr_cmds.c  pr_edict.c  quakedef.h  render.h  sbar.c  screen.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl.c  sound.h  sv_main.c  sv_phys.c  sys.h  sys_null.c  sys_sdl.c  sys_sdl.cpp  vid.h  vid_null.c  view.c  world.c  (+2 more)
src/ren_gl/: draw.cpp  gl_draw.cpp  gl_efrag.cpp  gl_helpers.h  gl_level.cpp  gl_level.h  gl_local.h  gl_main.cpp  gl_model.cpp  gl_model.h  gl_particle.cpp  gl_renderpass.h  gl_utils.cpp  gl_utils.h  gl_vertexattr.h  glbrushmdl.cpp  glbrushmdl.h  glcommon.h  gldraw.cpp  glhelper.h  gllevel.cpp  gllevel.h  glmain.cpp  glmodel.cpp  glmodel.h  glrenderpass.h  glrenderprg.h  glvertexattr.h  particle.cpp  quakeutils.cpp  quakeutils.h  render.cpp  utils.cpp  utils.h  vid_gl.cpp
src/ren_soft/: d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sprite.c  d_surf.c  d_vars.c  draw.c  r_aclip.c  r_alias.c  r_draw.c  r_edge.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_shared.h  r_sky.c  r_surf.c  r_vars.c  sdl_ras.cpp  vid_sdl.cpp
